Working worker list

--- a/web/app/src/style/_utils.scss
+++ b/web/app/src/style/_utils.scss
@@ -36,3 +36,7 @@
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Opera and Firefox */
 }
+
+.bluegray {
+	color: #4e5f83 !important;
+}
